--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ dependencies {
      * */
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
+
+    def swiperefreshlayout= "1.0.0"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swiperefreshlayout"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     /**
@@ -39,7 +42,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    
+
+
     /**
      * Card view
      * */
