--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,4 +104,7 @@ dependencies {
     def recyclerview_version = "1.1.0"
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
 
+    def circle_image_versiom = "3.1.0"
+    implementation "de.hdodenhof:circleimageview:$circle_image_versiom"
+
 }
