--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,5 +106,7 @@ dependencies {
 
     def circle_image_versiom = "3.1.0"
     implementation "de.hdodenhof:circleimageview:$circle_image_versiom"
+    def material_version = "1.0.0"
+    implementation "com.google.android.material:material:$material_version"
 
 }
