--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".dashboard.DashBoardActivity" />
-        <activity android:name=".countrydetails.DetailsActivity" />
+        <activity android:name=".dashboard.DashBoardActivity"
+            android:screenOrientation="unspecified"/>
+        <activity android:name=".countrydetails.DetailsActivity"
+            android:screenOrientation="unspecified"/>
     </application>
 
 </manifest>
