--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,5 +136,13 @@ dependencies {
     def hbb_version ="2.4.0"
     implementation "com.hbb20:ccp:$hbb_version"
 
+    /**
+     * Navigation Component
+     */
+    def nav_version = "2.3.0"
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+
+
 
 }
