--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
-    def swiperefreshlayout= "1.0.0"
+    def swiperefreshlayout= "1.1.0"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swiperefreshlayout"
 
     def constraint_version = "1.1.3"
@@ -65,14 +65,13 @@ dependencies {
     /**
      * Network libraries
      * */
-    def retrofit2_version="2.3.0"
+    def retrofit2_version="2.9.0"
     implementation("com.squareup.retrofit2:retrofit:$retrofit2_version")
             {
                 exclude module: 'okhttp'
             }
 
-    def retrofit2_convertor_version = "2.3.0"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit2_convertor_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit2_version"
 
     def rxjava2_version = "2.1.9"
     implementation "io.reactivex.rxjava2:rxjava:$rxjava2_version"
@@ -80,11 +79,11 @@ dependencies {
     def rxandroid_version = "2.1.1"
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
 
-    def adapter_rxjava2_version = "2.3.0"
+    def adapter_rxjava2_version = "2.5.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$adapter_rxjava2_version"
 
 
-    def okhttp3_logging_interceptor = "3.9.1"
+    def okhttp3_logging_interceptor = "4.4.0"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_logging_interceptor"
 
 
