--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,19 +11,19 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_covid_launcher"
         android:label="@string/app_name"
-        android:name=".BaseApplication"
+        android:name="com.lyecdevelopers.covidstatus.BaseApplication"
         android:roundIcon="@mipmap/ic_covid_launcher_round"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.splashscreen.MainActivity">
+        <activity android:name="com.lyecdevelopers.covidstatus.ui.splashscreen.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activities.DashBoardActivity"
+        <activity android:name="com.lyecdevelopers.covidstatus.ui.activities.DashBoardActivity"
             android:screenOrientation="sensorPortrait"/>
     </application>
 
