--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.covidstatusapp"
+        applicationId "com.lyecdevelopers.covidstatusapp"
         minSdkVersion 24
         targetSdkVersion 30
         versionCode 3
